# oscmex

./: .gitignore  AudioEngine_ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  MERMAID.md  README.md  TODO.md  asio_audio_engine_config.ipynb  build_ffmpeg.bat  build_ffmpeg.sh  device_state_implementation.ipynb  intel_build.bat  oscmex.code-workspace  rme_osc_config.md  sample_project.cpp
doc/: AudioNode_Framework.md  Gemini.html  OscController_Decoupling.md  oneapi_programming-guide_2025.1-771723-848694.html
doc/Gemini_files/: RotateCookiesPage.html  app.html  destination  f(1).txt  f(10).txt  f(11).txt  f(12).txt  f(13).txt  f(14).txt  f(15).txt  f(16).txt  f(17).txt  f(18).txt  f(19).txt  f(2).txt  f(20).txt  f(21).txt  f(3).txt  f(4).txt  f(5).txt  f(6).txt  f(7).txt  f(8).txt  f(9).txt  f.txt  gtm.js.download  js  js(1)  m=_b  saved_resource.html
doc/osc_table_totalmix_new/: OscTableTotalMix_240722.xls
example/: osc_test_client.m  osc_test_server.m
src/: AsioDeviceInterface.cpp  AsioDeviceInterface.h  AsioManager.cpp  AsioManager.h  MERMAID.md  README.md  ServerThread.h  TimeTag.h  initAudioEngine.coffee  osc_make.m  osc_new_server.c
src/AudioEngine/: AsioManager.cpp  AsioManager.h  AsioNodes.h  AsioSinkNode.cpp  AsioSinkNode.h  AsioSourceNode.h  AudioBuffer.cpp  AudioBuffer.h  AudioEngine.cpp  AudioEngine.h  AudioNode.cpp  AudioNode.h  Configuration.cpp  Configuration.h  ConfigurationParser.cpp  ConfigurationParser.h  Connection.cpp  Connection.h  DeviceState.cpp  DeviceState.h  DeviceStateManager.cpp  DeviceStateManager.h  FfmpegFilter.cpp  FfmpegFilter.h  FfmpegProcessorNode.cpp  FfmpegProcessorNode.h  FileNodes.h  FileSinkNode.h  FileSourceNode.cpp  FileSourceNode.h  HardwareAbstraction.h  IExternalControl.h  MERMAID.md  OscController.cpp  OscController.h  OscDeviceInterface.h  OscMessageDispatcher.h  ProcessorNode.h  RmeOscController.cpp  RmeOscController.h  (+9 more)
src/AudioFlow/: AudioBuffer.cpp  AudioBuffer.h
src/AudioNode/: AsioNodes.cpp  (+8 more)
src/oscmix/: ARCHITECTURE.md  CMakeLists.txt  MERMAID_oscmix.md  README.md  TODO.md  alsaeqio.c  device.c  device.h  device_ff802.c  device_ffucxii.c  device_ffufxii.c  device_observers.c  device_observers.h  device_state.c  device_state.h  dump.c  dump.h  http.c  http.h  intpack.h  logging.c  logging.h  main.c  main_old.c  main_unix.c  main_win.c  observer_functions.c  observer_functions.h  osc.c  osc.h  osc_rme.cpp  oscmix.c  oscmix.h  oscmix_commands.c  oscmix_commands.h  oscmix_midi.c  oscmix_midi.h  oscnode_tree.c  oscnode_tree.h  platform.c  (+9 more)
src/oscmix/alsa/: alsaeqio.c  alsarawio.c  alsarawio_unix.c
src/oscmix/backups/: oscmix copy.c  oscmix copy.h
src/oscmix/doc/: OSCMIX_ARCHITECTURE.md  ufx2-usb-desc.txt  ufx2-usb-desc_win.txt
src/oscmix/lo/: lo_endian.h
src/oscmix/matlab/example/: osc_test_server.m
src/oscmix/tools/: usbdesc.c
src/oscpp/oscpp/: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  CMakePresets.json  Doxyfile  INSTALL.md  README.md  README_src.md  SPECIFICATION.md  TODO.md  build.bat  build.ninja  build.sh  build_cross.bat  build_intel.bat  package_cross.bat
src/oscpp/oscpp/cmake/: oscppConfig.cmake.in  toolchain.cmake.in
src/oscpp/oscpp/doc/html/: _a_r_c_h_i_t_e_c_t_u_r_e_8md.html  _address_8cpp.html  _address_8cpp_source.html  _address_8h.html  _address_8h.js  _address_8h_source.html  _address_impl_8cpp.html  _address_impl_8cpp_source.html  _address_impl_8h.html  _address_impl_8h.js  _address_impl_8h_source.html  _bundle_8cpp.html  _bundle_8cpp.js  _bundle_8cpp_source.html  _bundle_8h.html  _bundle_8h.js  _bundle_8h_source.html  _exceptions_8h.html  _exceptions_8h.js  _exceptions_8h_source.html  _message_8cpp.html  _message_8cpp.js  _message_8cpp_source.html  _message_8h.html  _message_8h.js  _message_8h_source.html  _o_s_c_8h.html  _o_s_c_8h.js  _o_s_c_8h_source.html  _o_s_c_exception_8cpp.html  _o_s_c_exception_8cpp_source.html  _r_e_a_d_m_e_8md.html  _s_p_e_c_i_f_i_c_a_t_i_o_n_8md.html  _server_8cpp.html  _server_8cpp_source.html  _server_8h.html  _server_8h.js  _server_8h_source.html  _server_impl_8cpp.html  _server_impl_8cpp.js  (+206 more)
src/oscpp/oscpp/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  (+76 more)
src/oscpp/oscpp/examples/: CMakeLists.txt  client_example.cpp  server_example.cpp
src/oscpp/oscpp/html/: doxygen_crawl.html  md__a_r_c_h_i_t_e_c_t_u_r_e.html  md__r_e_a_d_m_e.html  md__r_e_q_u_i_r_e_m_e_n_t_s.html  md__s_p_e_c_i_f_i_c_a_t_i_o_n.html  md__t_o_d_o.html  navtreedata.js  navtreeindex0.js  pages.html
src/oscpp/oscpp/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_1.js  pages_2.js  pages_3.js  pages_5.js  pages_6.js  pages_7.js  pages_9.js  searchdata.js
src/oscpp/oscpp/include/osc/: Address.h  AddressImpl.h  Bundle.h  Exceptions.h  Message.h  OSC.h  Server.h  ServerImpl.h  ServerThread.h  Types.h
src/oscpp/oscpp/latex/: md__a_r_c_h_i_t_e_c_t_u_r_e.tex  md__r_e_a_d_m_e.tex  md__r_e_q_u_i_r_e_m_e_n_t_s.tex  md__s_p_e_c_i_f_i_c_a_t_i_o_n.tex  md__t_o_d_o.tex  refman.tex
src/oscpp/oscpp/src/: Address.cpp  AddressImpl.cpp  AddressImpl.h  Bundle.cpp  Message.cpp  OSCException.cpp  Server.cpp  ServerImpl.cpp  ServerImpl.h  ServerThread.cpp  TimeTag.cpp  Value.cpp  main.cpp
src/oscpp/oscpp/tests/: CMakeLists.txt  test_address.cpp  test_bundle.cpp  test_message.cpp  test_pattern_matching.cpp  test_server.cpp  test_tcp_framing.cpp  test_timetag.cpp
tests/: test_placeholder.cpp
(+85 files in other folders)
